5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4131/executions/1863_2177.log
== TEST (2019-07-02 10:08:01) 
-- CODE:
from numpy import*	
from numpy.linalg import*
a = array([["aa:"],["bb:"],["cc:"]])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*	
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:08:15) 
-- CODE:
from numpy import*	
from numpy.linalg import*
a = array(input([["aa:"],["bb:"],["cc:"]]))0
-- ERROR:
File "XXXX", line 3
    a = array(input([["aa:"],["bb:"],["cc:"]]))0
                                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:08:36) 
-- CODE:
from numpy import*	
from numpy.linalg import*
a = array(input([["aa:"],["bb:"],["cc:"]]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*	
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:09:09) 
-- CODE:
from numpy import*	
from numpy.linalg import*
a = array(input([["aa:"]]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*	
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:09:22) 
-- CODE:
from numpy import*	
from numpy.linalg import*
a = array(eval(input([["aa:"]])))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*	
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:09:35) 
-- CODE:
from numpy import*	
from numpy.linalg import*
a = array(eval(input("aa:")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*	
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:11:13) 
-- CODE:
from numpy import*	
from numpy.linalg import*
a = array(eval(input("aa:")))
print(min(a))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*	
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 10:11:54) 
-- CODE:
from numpy import*	
from numpy.linalg import*
a = array(eval(input("aa:")))
print(min(a))
-- EXECUTION TIME:
1.01436
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1863/2177/main.py", line 4, in <module>
    print(min(a))
ValueError: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:16:28) 
-- CODE:
from numpy import*	
from numpy.linalg import*
a = array(eval(input("aa:")))
print(min(a))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*	
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:16:45) 
-- CODE:
from numpy import*	
from numpy.linalg import*
a = array(eval(input("aa:")))
print(size(a))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*	
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:17:16) 
-- CODE:
from numpy import*	
from numpy.linalg import*
a = array(eval(input("aa:")))
print(min(a))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*	
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:20:34) 
-- CODE:
from numpy import*	
from numpy.linalg import*
a = array(eval(input("aa:")))

print(max(a))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*	
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:21:07) 
-- CODE:
from numpy import*	
a = array(eval(input("aa:")))

print(max(a))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*	
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:28:36) 
-- CODE:
from numpy import*	
from numpy.linalg import*
a = array("aa:")

print(max(a))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*	
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:28:58) 
-- CODE:
from numpy import*	
from numpy.linalg import*
a = array([["aa:"]])

print(max(a))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*	
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:29:06) 
-- CODE:
from numpy import*	
from numpy.linalg import*
a = array([[]])

print(max(a))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*	
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:29:13) 
-- CODE:
from numpy import*	
from numpy.linalg import*
a = array([[, , ,]])

print(max(a))
-- ERROR:
File "XXXX", line 3
    a = array([[, , ,]])
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:30:07) 
-- CODE:
from numpy import*	
from numpy.linalg import*
a = array(eval(input("aa:")))

print(max(a))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*	
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 10:39:42) 
-- CODE:
from numpy import*	
from numpy.linalg import*
a = array(eval(input("aa:")))

print(max(a))
-- EXECUTION TIME:
1.127
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1863/2177/main.py", line 5, in <module>
    print(max(a))
ValueError: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
